--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   get_it: ^8.0.3
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
+  shimmer: ^3.0.0
+  flutter_localization: ^0.3.2
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -79,17 +83,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Vazir
+      fonts:
+        - asset: assets/fonts/Vazir-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Vazir-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Vazir-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Vazir-Bold.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
