--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   smooth_page_indicator: ^1.2.1
   cached_network_image: ^3.4.1
+  supabase_flutter: ^2.9.1
 
 dev_dependencies:
   flutter_test:
